<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_background">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTitle"
        android:layout_width="387dp"
        android:layout_height="69dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_title">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="338dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="26dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="23dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewComponents"
        android:layout_width="387dp"
        android:layout_height="525dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewTitle"
        app:layout_constraintVertical_bias="0.205">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_cardview">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewName"
                android:layout_width="320dp"
                android:layout_height="75dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="421dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="20dp">

                <RelativeLayout
                    android:layout_width="321dp"
                    android:layout_height="81dp">

                    <EditText
                        android:id="@+id/edtUsername"
                        android:layout_width="276dp"
                        android:layout_height="59dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="11dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginBottom="19dp"
                        android:ems="10"
                        android:hint="@string/text_areaNameScreen1"
                        android:inputType="textPersonName" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewContactNo"
                android:layout_width="320dp"
                android:layout_height="75dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="146dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="307dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/edtContactNo"
                        android:layout_width="278dp"
                        android:layout_height="59dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="11dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="9dp"
                        android:ems="10"
                        android:hint="@string/text_areaContactNoScreen1"
                        android:inputType="textPersonName"
                        tools:layout_editor_absoluteX="-145dp"
                        tools:layout_editor_absoluteY="397dp" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewSimNetwork"
                android:layout_width="320dp"
                android:layout_height="75dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="271dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="182dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/edtSimNetwork"
                        android:layout_width="278dp"
                        android:layout_height="59dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="11dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="9dp"
                        android:ems="10"
                        android:hint="@string/text_areaSimNetworkScreen1"
                        android:inputType="textPersonName" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="320dp"
                android:layout_height="75dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="383dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="67dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="25dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/edtAddress"
                        android:layout_width="278dp"
                        android:layout_height="55dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="11dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="9dp"
                        android:ems="10"
                        android:hint="@string/text_areaCompleteAddressScreen1"
                        android:inputType="textPersonName" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="182dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:elevation="15dp"
        android:text="@string/button_registerScreen1"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>